app01-lab-classes/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Berzin Daruwala\Desktop\co452 git repos\BlueJ\Bluej-partA\app01-lab-classes
-d
C:\Users\Berzin Daruwala\Desktop\co452 git repos\BlueJ\Bluej-partA\app01-lab-classes\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Berzin Daruwala\Desktop\co452 git repos\BlueJ\Bluej-partA\app01-lab-classes\Student.java
<---- end of javadoc command ---->
Loading source file C:\Users\Berzin Daruwala\Desktop\co452 git repos\BlueJ\Bluej-partA\app01-lab-classes\Student.java...
C:\Users\Berzin Daruwala\Desktop\co452 git repos\BlueJ\Bluej-partA\app01-lab-classes\Student.java:29: error: illegal start of expression
        course = this.ArrayList<Course>;
                                       ^
1 error
